--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -3,4 +3,8 @@
 <files-path
     name = "files"
     path = "."/>
+    <external-files-path name="my_images" path="Pictures" />
+    <external-path
+        name="external_files"
+        path="." />
 </paths>
