--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -3,7 +3,9 @@
 <files-path
     name = "files"
     path = "."/>
-    <external-files-path name="my_images" path="Pictures" />
+    <external-files-path
+        name="external_files"
+        path="." />
     <external-path
         name="external_files"
         path="." />
