--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -7,6 +7,6 @@
         name="my_images"
         path="." />
     <external-path
-        name="my_images"
-        path="." />
+        name="external_files"
+        path="."/>
 </paths>
